# nucleo-l452re-p-embassy-examples

./: Cargo.toml  Embed.toml  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
