[package]
edition = "2021"
name = "nucleo-l452re-p-embassy-examples"
version = "0.1.0"
license = "All Rights Reserved"

[dependencies]
# Change stm32l452re to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "defmt", "unstable-pac", "stm32l452re", "time-driver-any", "memory-x", "exti", "unstable-traits", "chrono" ]  }
embassy-sync = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.3", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", "unstable-traits", "nightly"] }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embassy-usb = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
embedded-io-async = { version = "0.5.0", features = ["defmt-03"] }
embedded-io = { version = "0.5.0", features = ["defmt-03"] }

defmt = "0.3"
defmt-rtt = "0.4"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1" }
embedded-hal-async = { version = "=1.0.0-rc.1" }
embedded-hal-bus = { version = "=0.1.0-rc.1", features = ["async"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
chrono = { version = "^0.4", default-features = false }
rand = { version = "0.8.5", default-features = false }
static_cell = { version = "1.1", features = ["nightly"] }

micromath = { version = "2.0.0", features = ["vector"] }

[profile.release]
debug = 2


[patch."https://github.com/embassy-rs/embassy.git"]
#embassy-stm32 = { path = "../embassy-git/embassy-stm32" }
#embassy-usb = { path = "../embassy-git/embassy-usb" }
